<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mobileappdevelop.calculator.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/digit"
            android:textSize="25dp"
            android:textStyle="bold"
            android:maxLength="15"
            android:id="@+id/showResult"
            android:layout_weight="7"
            android:background="@drawable/button_screen"
            android:textColor="@android:color/white"
            android:gravity="center_vertical"/>

        <TextView
            android:id="@+id/tvOperator"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_screen"
            android:textColor="@android:color/white"
            android:gravity="center"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="enterValue"
            android:text="@string/seven"
            android:background="@drawable/button_val"
            android:textSize="15dp"/>
        <Button
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="enterValue"
            android:text="@string/eight"
            android:background="@drawable/button_val"
            android:textSize="15dp"/>
        <Button
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="enterValue"
            android:text="@string/nine"
            android:background="@drawable/button_val"
            android:textSize="15dp"/>

        <Button
            android:id="@+id/buttonPlus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="enterOperator"
            android:text="@string/plus"
            android:textSize="15dp"
            android:background="@drawable/button"
            android:textColor="@android:color/white"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="enterValue"
            android:text="@string/six"
            android:background="@drawable/button_val"
            android:textSize="15dp"/>
        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="enterValue"
            android:text="@string/five"
            android:background="@drawable/button_val"
            android:textSize="15dp"/>
        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="enterValue"
            android:text="@string/four"
            android:background="@drawable/button_val"
            android:textSize="15dp"/>
        <Button
            android:id="@+id/buttonMinus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="enterOperator"
            android:text="@string/minus"
            android:textSize="15dp"
            android:background="@drawable/button"
            android:textColor="@android:color/white"/>


    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">
        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="enterValue"
            android:text="@string/one"
            android:background="@drawable/button_val"
            android:textSize="15dp"/>
        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="enterValue"
            android:text="@string/two"
            android:background="@drawable/button_val"
            android:textSize="15dp"/>

            <Button
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="enterValue"
                android:text="@string/three"
                android:background="@drawable/button_val"
                android:textSize="15dp"/>

            <Button
                android:id="@+id/buttonMul"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="enterOperator"
                android:text="@string/mul"
                android:textSize="15dp"
                android:background="@drawable/button"
                android:textColor="@android:color/white"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/buttonDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="enterValue"
            android:text="@string/dot"
            android:background="@drawable/button_val"
            android:textSize="15dp"/>
        <Button
            android:id="@+id/button0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="enterValue"
            android:text="@string/zero"
            android:background="@drawable/button_val"
            android:textSize="15dp"/>
        <Button
            android:id="@+id/buttonDel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="delValue"
            android:text="@string/delete"
            android:background="@drawable/button_val"
            android:textSize="15dp"/>


        <Button
            android:id="@+id/buttonDiv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="enterOperator"
            android:text="@string/div"
            android:textSize="15dp"
            android:background="@drawable/button"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/equals"
            android:textSize="15dp"
            android:id="@+id/buttonEqual"
            android:background="@drawable/button_val"
            android:onClick="enterEqual"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/neg"
            android:textSize="15dp"
            android:id="@+id/buttonNeg"
            android:background="@drawable/button_val"
            android:onClick="enterNeg"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/btnClear"
            android:text="@string/resetValue"
            android:textSize="15dp"
            android:background="@drawable/button"
            android:onClick="clearValue"/>


    </LinearLayout>

</LinearLayout>